--- a/playbooks/roles/npm/tasks/main.yml
+++ b/playbooks/roles/npm/tasks/main.yml
@@ -1,12 +1,15 @@
 ---
-- apt: name=npm
+- apt: name=npm state=latest
+
 - stat: path=/usr/bin/node
   register: node
 - command: ln -s /usr/bin/nodejs /usr/bin/node
   when:    ( not node.stat.exists )
+
 - npm:  name={{item}} global=yes production=yes
   when: once_a_day
   with_items:
-       - grunt
        - grunt-cli
        - bower
+- command: grunt --version
+- command: bower --version
