--- a/playbooks/roles/jenkins/tasks/main.yml
+++ b/playbooks/roles/jenkins/tasks/main.yml
@@ -16,7 +16,7 @@
 
 - name: Write Jenkins files
   template:
-    src:   "{{ jenkins.templates }}/{{ item }}"
+    src:   "{{ item }}"
     dest:  "{{ jenkins.home }}"
     owner: jenkins
     group: jenkins
