--- a/playbooks/jenkins-ubuntu.yml
+++ b/playbooks/jenkins-ubuntu.yml
@@ -6,6 +6,10 @@
   hosts: all
   sudo:  yes
 
+  vars_files:
+    - vars/common.yml
+    - vars/{{ ansible_distribution }}.yml
+
   roles:
     - { role: periodic-before, period: ( 24 * 3600 ) }
     - { role: base, when: periodic }
