--- a/playbooks/roles/jenkins/tasks/main.yml
+++ b/playbooks/roles/jenkins/tasks/main.yml
@@ -76,4 +76,5 @@
     dest:  "{{ jenkins.home }}/plugins/{{ item.key }}.hpi"
     force: "{{ jenkins.plugins.redownload }}"
 
-- service: name=jenkins state=restarted
+- name: Restart Jenkins service
+  service: name=jenkins state=restarted
