--- a/playbooks/roles/periodic-after/tasks/main.yml
+++ b/playbooks/roles/periodic-after/tasks/main.yml
@@ -1,3 +1,5 @@
 ---
-- command: touch {{ periodic.touch_file }}
+- include_vars: roles/periodic-before/vars/main.yml
+
+- command: touch {{ periodic_touch_file }}
   when:    periodic
