--- a/playbooks/roles/periodic-before/tasks/main.yml
+++ b/playbooks/roles/periodic-before/tasks/main.yml
@@ -1,9 +1,11 @@
 ---
 
-- stat: path={{ periodic.touch_file }}
+- stat: path={{ periodic_touch_file }}
   register: touch
 
+- debug: var=period
+
 - set_fact:
-    periodic: "{{ ( not touch.stat.exists ) or (( ansible_date_time.epoch|int - touch.stat.atime|int ) > period ) }}"
+    periodic: "{{ ( not touch.stat.exists ) or (( ansible_date_time.epoch|int - touch.stat.atime|int ) > ( period|int )) }}"
 
 - debug: var=periodic
