--- a/playbooks/asgard-ubuntu.yml
+++ b/playbooks/asgard-ubuntu.yml
@@ -19,7 +19,7 @@
       prompt: AWS_SECRET_ACCESS_KEY
 
   roles:
-    - { role: periodic-before, period: ( 24 * 3600 ) }
+    - { role: periodic-before, period: "{{ 24 * 3600 }}" }
     - { role: base, when: periodic }
     - java
     - asgard
