--- a/playbooks/roles/mysql/tasks/main.yml
+++ b/playbooks/roles/mysql/tasks/main.yml
@@ -1,6 +1,22 @@
 ---
-- apt: name={{ item }} state=latest
+
+- copy:
+    src:  mysql.list
+    dest: /etc/apt/sources.list.d/mysql.list
+
+- apt: update_cache=yes
+  when: periodic
+
+- apt: name={{ item }} state=latest force=yes
   with_items:
     - mysql-server
     - python-mysqldb
   when: periodic
+
+- command: mysql --version
+  register: mysql_version
+
+- assert:
+    that:
+      - "'mysql' in mysql_version.stdout"
+      - "'5.6'   in mysql_version.stdout"
