--- a/playbooks/roles/mysql/tasks/main.yml
+++ b/playbooks/roles/mysql/tasks/main.yml
@@ -20,3 +20,12 @@
     that:
       - "'mysql' in mysql_version.stdout"
       - "'5.6'   in mysql_version.stdout"
+
+# http://stackoverflow.com/a/21151255/472153
+- lineinfile:
+    dest: /etc/mysql/my.cnf
+    line: '# bind-address = 127.0.0.1'
+    regexp: ^bind-address\s+=
+
+- name: Restart MySQL
+  service: name=mysql state=restarted
