--- a/playbooks/roles/asgard/tasks/main.yml
+++ b/playbooks/roles/asgard/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- assert:
+    that:
+      - AWS_ACCOUNT_ID        is defined
+      - AWS_ACCESS_KEY_ID     is defined
+      - AWS_SECRET_ACCESS_KEY is defined
+
 - group:
     name:  "{{ asgard.group }}"
 
