--- a/playbooks/roles/jenkins/vars/main.yml
+++ b/playbooks/roles/jenkins/vars/main.yml
@@ -38,7 +38,7 @@ jenkins: {
       # https://wiki.jenkins-ci.org/display/JENKINS/Github+OAuth+Plugin
       github-oauth:  '*',
       # https://wiki.jenkins-ci.org/display/JENKINS/Notification+Plugin
-      notification:  'https://www.dropbox.com/s/vh3ifzcqxw7aqa2/notification.hpi?dl=1'
+      notification:  'https://s3-eu-west-1.amazonaws.com/evgenyg-bakery/notification.hpi'
     }
   },
 
