Asgard role - asgard.start_service variable is added.

--- a/playbooks/roles/asgard/tasks/main.yml
+++ b/playbooks/roles/asgard/tasks/main.yml
@@ -74,5 +74,10 @@
 - name: Check Asgard java
   command: "{{ asgard.java }} -version"
 
+- name: Stop Asgard service
+  service: name=asgard state=stopped
+  when: ( not asgard.start_service|bool )
+
 - name: Restart Asgard service
   service: name=asgard state=restarted
+  when: asgard.start_service|bool
