Asgard role - asgard_start_service variable is used.

--- a/playbooks/roles/asgard/tasks/main.yml
+++ b/playbooks/roles/asgard/tasks/main.yml
@@ -76,8 +76,8 @@
 
 - name: Stop Asgard service
   service: name=asgard state=stopped
-  when: ( not asgard.start_service|bool )
+  when: ( not asgard_start_service|bool )
 
 - name: Restart Asgard service
   service: name=asgard state=restarted
-  when: asgard.start_service|bool
+  when: asgard_start_service
