Periodic touch fix

--- a/playbooks/roles/periodic-after/tasks/main.yml
+++ b/playbooks/roles/periodic-after/tasks/main.yml
@@ -2,5 +2,6 @@
 - include_vars: roles/periodic-before/vars/main.yml
 
 - file:
-    path: "{{ periodic_touch_file }}"
+    path:  "{{ periodic_touch_file }}"
     state: touch
+  when:    periodic
