--- a/playbooks/packer-ubuntu.yml
+++ b/playbooks/packer-ubuntu.yml
@@ -12,6 +12,7 @@
 
   roles:
     - { role: periodic-before, period: "{{ 24 * 3600 }}" }
-    - { role: base, when: periodic }
+    - { role: base,   when: periodic }
+    - { role: docker, when: periodic }
     - packer
     - periodic-after
