--- a/docker/ansible/Dockerfile
+++ b/docker/ansible/Dockerfile
@@ -5,7 +5,7 @@ FROM ubuntu
 RUN apt-get update  -y
 RUN apt-get upgrade -y
 RUN apt-get install -y vim htop python-pip python-dev
-RUN pip install ansible
+RUN pip install ansible==1.7.1
 RUN apt-get purge   -y python-dev
 
 RUN mkdir -p /etc/ansible
