--- a/playbooks/packer-ubuntu.yml
+++ b/playbooks/packer-ubuntu.yml
@@ -12,7 +12,10 @@
 
   roles:
     - { role: periodic-before, period: "{{ 24 * 3600 }}" }
-    - { role: base,   when: periodic }
-    - { role: docker, when: periodic }
+    - { role: base,    when: periodic }
+    - { role: docker,  when: periodic }
+    - { role: ansible, when: periodic }
+    - { role: vagrant, when: periodic }
+    - virtualbox
     - packer
     - periodic-after
