--- a/playbooks/roles/jenkins/tasks/main.yml
+++ b/playbooks/roles/jenkins/tasks/main.yml
@@ -7,7 +7,7 @@
     install_jenkins: "{{ ( not home_stat.stat.exists ) or ( periodic|bool ) }}"
 - debug: var=install_jenkins
 
-- apt_key: file="{{ jenkins.files }}/jenkins-ci.org.key"
+- apt_key: url='https://jenkins-ci.org/debian/jenkins-ci.org.key'
   when: install_jenkins
 - apt_repository: repo='deb http://pkg.jenkins-ci.org/debian binary/'
   when: install_jenkins
