--- a/playbooks/roles/virtualbox/tasks/main.yml
+++ b/playbooks/roles/virtualbox/tasks/main.yml
@@ -4,3 +4,6 @@
 - apt_key: url='http://download.virtualbox.org/virtualbox/debian/oracle_vbox.asc'
 - apt_repository: repo='deb http://download.virtualbox.org/virtualbox/debian trusty contrib non-free'
 - apt: update_cache=yes name=virtualbox-4.3
+
+- command: VBoxManage --version
+- command: VBoxManage list vms
