--- a/playbooks/roles/ansible/vars/main.yml
+++ b/playbooks/roles/ansible/vars/main.yml
@@ -1,5 +1,6 @@
 ---
 ansible: {
-  version: 1.7.1 # or 'latest'
-#  version: latest
+  version: 1.7.1, # or 'latest'
+  # version: latest,
+  inventory_file: /etc/ansible/hosts
 }
