MySQL role updates, update_cache moves to apt_repository

--- a/playbooks/mysql-ubuntu.yml
+++ b/playbooks/mysql-ubuntu.yml
@@ -12,6 +12,7 @@
 
   roles:
     - { role: periodic-before, period: "{{ 24 * 3600 }}" }
-    - { role: base, when: periodic }
+    - { role: base,    when: periodic }
+    - { role: ansible, when: periodic }
     - mysql
     - periodic-after
