--- a/playbooks/roles/jenkins/vars/main.yml
+++ b/playbooks/roles/jenkins/vars/main.yml
@@ -45,3 +45,6 @@ jenkins: {
 
   jobs: [ 'asgard' ]
 }
+
+# Ansible "--extra-vars" option doesn't get dots in variable names
+jenkins_start_service: true
