--- a/playbooks/asgard-ubuntu.yml
+++ b/playbooks/asgard-ubuntu.yml
@@ -14,7 +14,8 @@
 
   roles:
     - { role: periodic-before, period: "{{ 24 * 3600 }}" }
-    - { role: base, when: periodic }
+    - { role: base,    when: periodic }
+    - { role: ansible, when: periodic }
     - java
     - asgard
     - periodic-after
