--- a/playbooks/jenkins-ubuntu.yml
+++ b/playbooks/jenkins-ubuntu.yml
@@ -12,8 +12,9 @@
 
   roles:
     - { role: periodic-before, period: "{{ 24 * 3600 }}" }
-    - { role: base, when: periodic }
-    - { role: npm,  when: periodic }
+    - { role: base,    when: periodic }
+    - { role: ansible, when: periodic }
+    - { role: npm,     when: periodic }
     - java
     - jenkins
     - periodic-after
