--- a/playbooks/roles/mysql/tasks/main.yml
+++ b/playbooks/roles/mysql/tasks/main.yml
@@ -1,14 +1,19 @@
 ---
 
-- copy:
-    src:  mysql.list
-    dest: "{{ mysql.mysql_list }}"
+# http://dev.mysql.com/downloads/repo/apt/
+# http://dev.mysql.com/downloads/file.php?id=452447
+# http://dev.mysql.com/get/mysql-apt-config_0.2.1-1ubuntu14.04_all.deb
 
-- apt: update_cache=yes
-  when: periodic
+- apt_repository: repo="{{ item }}" update_cache=yes
+  with_items:
+    - deb http://repo.mysql.com/apt/ubuntu/ trusty mysql-5.6
+    - deb-src http://repo.mysql.com/apt/ubuntu/ trusty mysql-5.6
 
-- apt: name=mysql-server state=latest force=yes
+- apt: name={{ item }} state=latest force=yes
   when: periodic
+  with_items:
+    - mysql-community-server
+    - mysql-server
 
 - command:  mysql --version
   register: mysql_version
@@ -24,11 +29,22 @@
     line: '# bind-address = 127.0.0.1'
     regexp: ^bind-address\s+=
 
+- set_fact:
+    remote_access_script: /etc/mysql/root_remote_access.sql
+
+- name: Start MySQL service
+  service: name=mysql state=started
+
 - copy:
-    src:  root.sql
-    dest: "{{ mysql.root_sql }}"
+    src:  root_remote_access.sql
+    dest: "{{ remote_access_script }}"
 
-- shell: "mysql -u root < {{ mysql.root_sql }}"
+- shell: "mysql -u root < {{ remote_access_script }}"
 
-- name: Restart MySQL
+- name: Stop MySQL service
+  service: name=mysql state=stopped
+  when: ( not mysql_start_service|bool )
+
+- name: Restart MySQL service
   service: name=mysql state=restarted
+  when: mysql_start_service
