--- a/playbooks/roles/mysql/tasks/main.yml
+++ b/playbooks/roles/mysql/tasks/main.yml
@@ -9,7 +9,7 @@
     - deb http://repo.mysql.com/apt/ubuntu/ trusty mysql-5.6
     - deb-src http://repo.mysql.com/apt/ubuntu/ trusty mysql-5.6
 
-- apt: name={{ item }} state=latest force=yes
+- apt: name={{ item }} state=latest force=yes upgrade=yes
   when: periodic
   with_items:
     - mysql-community-server
