--- a/playbooks/roles/mysql/tasks/main.yml
+++ b/playbooks/roles/mysql/tasks/main.yml
@@ -9,8 +9,13 @@
     - deb http://repo.mysql.com/apt/ubuntu/ trusty mysql-5.6
     - deb-src http://repo.mysql.com/apt/ubuntu/ trusty mysql-5.6
 
-- apt: name={{ item }} state=latest force=yes upgrade=yes
-  when: periodic
+# Shippable containers come with their own MySQL
+- apt: name={{ item }} state=absent force=yes
+  with_items:
+    - mysql-community-server
+    - mysql-server
+
+- apt: name={{ item }} state=latest force=yes
   with_items:
     - mysql-community-server
     - mysql-server
